@@ -1,12 +1,21 @@
 {
-  "timestamp" : "2024-12-26T01:43:43Z",
+  "timestamp" : "2024-12-31T01:44:02Z",
   "count_outdated" : 1739,
   "uniques_outdated" : 984,
-  "count" : 1740,
-  "uniques" : 985,
+  "count" : 1741,
+  "uniques" : 986,
   "clones" : [
     {
       "timestamp": "2024-12-22T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-12-30T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
