@@ -1,3 +1,12 @@
+2024-12-31T01:44:02Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12554226620 # 526
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-31
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 984 1739 / 985 1740
+* notice: next accum: outdated-unq outdated-all / unq all: 984 1739 / 986 1741
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-12-30]
+
 2024-12-26T01:43:43Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12498367866 # 521
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-26
